# qdrant-essential-course

./: .gitignore  main.py  pyproject.toml
day_0/: first_vector_search.py  project.py
day_1/: project.py
day_2/: hnsw_benchmark.py
day_3/: demo.py
day_5/: project.py
