[project]
name = "qdrant-essential-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.2.0",
    "ipython>=9.10.0",
    "llama-index-core>=0.14.15",
    "llama-index-embeddings-huggingface>=0.6.1",
    "pandas>=3.0.1",
    "qdrant-client>=1.16.2",
    "sentence-transformers>=5.2.3",
    "transformers>=5.2.0",
]
